# ray-tracer-challenge-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test.yaml  tests.yaml
ray-tracer/: Cargo.toml
ray-tracer-cli/: Cargo.toml
ray-tracer-cli/scenes/: refraction.yaml
ray-tracer-cli/src/: cli.rs  main.rs  scene_loader.rs  scenes.rs
ray-tracer/src/: composites.rs  consts.rs  dyn_partial_eq.rs  lib.rs  primitives.rs  shapes.rs  utils.rs
ray-tracer/src/composites/: camera.rs  canvas.rs  computed_hit.rs  intersection.rs  intersections.rs  material.rs  ray.rs  world.rs
ray-tracer/src/patterns/: checker_pattern.rs  complex_pattern.rs  gradient_pattern.rs  pattern.rs  ring_pattern.rs  stripe_pattern.rs
ray-tracer/src/primitives/: color.rs  light.rs  matrix.rs  point.rs  transformations.rs  vector.rs
ray-tracer/src/shapes/: cone.rs  cube.rs  cylinder.rs  plane.rs  shape.rs  sphere.rs  triangle.rs
scenes/: cover.yaml  cylinders.yaml  metal.yaml  reflect_refract.yaml  refraction.yaml  shadow_puppets.yaml  table.yaml  three_sphere_scene.yaml
src/: args.rs  camera.rs  canvas.rs  cli_arguments.rs  color.rs  computed_hit.rs  cone.rs  consts.rs  cube.rs  cylinder.rs  group.rs  intersection.rs  intersections.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  matrixv2.rs  pattern.rs  patterns.rs  plane.rs  point.rs  primitives.rs  ray.rs  scene_loader.rs  scenes.rs  shape.rs  shapes.rs  sphere.rs  transformations.rs  triangle.rs  tuple.rs  utils.rs  vector.rs  world.rs
src/composites/: camera.rs  canvas.rs  computed_hit.rs  intersection.rs  intersections.rs  material.rs  ray.rs  world.rs
src/patterns/: checker_pattern.rs  complex_pattern.rs  gradient_pattern.rs  pattern.rs  ring_pattern.rs  (+1 more)
(+15 files in other folders)
