[workspace]
members = ["ray-tracer", "ray-tracer-cli"]
resolver = "2"

[workspace.dependencies]
bincode = "2.0.0-rc.3"
clap = { version = "4.5.20", features = ["derive"] }
image = { version = "0.25.5", features = ["rayon", "png"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
yaml-rust = "0.4.5"
rstest = "0.23.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
