[workspace]
members = ["ray-tracer", "ray-tracer-cli"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
image = { version = "0.25.6", features = ["rayon", "png"] }
indicatif = { version = "0.17.12", features = ["rayon"] }
rayon = "1.10.0"
yaml-rust = "0.4.5"
rstest = "0.25.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
